<resources>
    <string name="app_name">Ranet</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    
    <!--SearchActivity-->
    <string name="search_order">Search order</string>
    <string name="search">search</string>

    <!--MenuActivity-->
    <string name="main_menu">main menu</string>

    <!--SignatureActivity-->
    <string name="change_order_state">Change Order State</string>
    <string name="sign_order">sign order</string>

    <!--OrderItem-->
    <string name="product_name">Product Name:</string>
    <string name="product_code">Product Code:</string>
    <string name="price">Price/Unit:</string>
    <string name="amount">Amount:</string>
    <string name="total">Total:</string>
    <string name="products">Products:</string>
    <string name="shipping">Shipping:</string>

    <!--OrderActivity-->
    <string name="searched_order">Searched order</string>
    <string name="signature">Signature/Unterschrift</string>
</resources>