<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderActivity">

    <io.devlight.xtreeivi.cornercutlinearlayout.CornerCutLinearLayout
        android:id="@+id/content_shipping_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        app:ccll_child_corner_cut_depth="0dp"
        app:ccll_corner_cut_size="30dp"
        app:ccll_custom_shadow_color="#80000000"
        app:ccll_custom_shadow_radius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10">

        <TextView
            android:id="@+id/edttxt_map"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/background_edittext"
            android:ems="13"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"

            android:textSize="14sp" />

    </io.devlight.xtreeivi.cornercutlinearlayout.CornerCutLinearLayout>

    <io.devlight.xtreeivi.cornercutlinearlayout.CornerCutLinearLayout
        android:id="@+id/content_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        app:ccll_child_corner_cut_depth="0dp"
        app:ccll_corner_cut_size="30dp"
        app:ccll_custom_shadow_color="#80000000"
        app:ccll_custom_shadow_radius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/bttn_signature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_green_selector"
            android:fontFamily="@font/opensans_regular"
            android:text="@string/signature"
            android:textAllCaps="false"
            android:textSize="16sp" />
    </io.devlight.xtreeivi.cornercutlinearlayout.CornerCutLinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="#367723"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/bttn_back_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:background="@android:color/transparent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_arrow" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/opensans_semibold"
        android:text="@string/searched_order"
        android:textAllCaps="true"
        android:textColor="#343434"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/opensans_semibold"
        android:text="@string/total"
        android:textColor="#367723"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/content_button"
        app:layout_constraintStart_toStartOf="@+id/content_button" />

    <TextView
        android:id="@+id/txt_total_searched"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/opensans_semibold"
        android:textColor="#367723"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView11"
        app:layout_constraintEnd_toEndOf="@+id/content_button"
        app:layout_constraintTop_toTopOf="@+id/textView11"
        tools:text="678 CHF" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/opensans_semibold"
        android:text="@string/shipping"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/textView11"
        app:layout_constraintStart_toStartOf="@+id/content_button" />

    <TextView
        android:id="@+id/txt_shipping"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/opensans_semibold"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/textView11"
        app:layout_constraintEnd_toEndOf="@+id/content_button"
        tools:text="0 CHF" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/opensans_semibold"
        android:text="@string/products"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/textView12"
        app:layout_constraintStart_toStartOf="@+id/content_button" />

    <TextView
        android:id="@+id/txt_products"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/opensans_semibold"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/textView12"
        app:layout_constraintEnd_toEndOf="@+id/content_button"
        tools:text="678 CHF" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/order_items"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toTopOf="@+id/textView13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/content_shipping_address" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/content_shipping_address"
        app:layout_constraintEnd_toEndOf="@+id/content_shipping_address"
        app:layout_constraintTop_toTopOf="@+id/content_shipping_address"
        app:srcCompat="@drawable/map" />
</androidx.constraintlayout.widget.ConstraintLayout>